--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,17 @@
 .ipynb_checkpoints/
 *.ipynb
 
+# Gcov related
+*.gcda
+*.gcno
+coverage.info
+target/
+
+# debug and test data
+*.csv
+*.fasta
+*.txt
+
 # Executables
 *.exe
 *.out
@@ -42,3 +53,5 @@ huddinge_deb
 comp
 seed_finder
 seed_finder_deb
+test/test
+test/cover  
