--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "deps/sdsl-lite"]
 	path = deps/sdsl-lite
-	url = https://github.com/simongog/sdsl-lite.git
+	url = https://github.com/xxsds/sdsl-lite.git
 [submodule "deps/seqio"]
 	path = deps/seqio
 	url = https://github.com/jnalanko/seqio.git
