--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "deps/googletest"]
 	path = deps/googletest
 	url = https://github.com/google/googletest.git
+[submodule "deps/rapidcheck"]
+	path = deps/rapidcheck
+	url = https://github.com/emil-e/rapidcheck.git
