--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "deps/rapidcheck"]
 	path = deps/rapidcheck
 	url = https://github.com/emil-e/rapidcheck.git
+[submodule "deps/args"]
+	path = deps/args
+	url = https://github.com/Taywee/args.git
