Add libbio as submodule, use FASTA, FASTQ parsers as part of gapmer_count, partial_count

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "deps/args"]
 	path = deps/args
 	url = https://github.com/Taywee/args.git
+[submodule "deps/libbio"]
+	path = deps/libbio
+	url = https://github.com/tsnorri/libbio.git
