--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -3,29 +3,30 @@ package:
   version: {{ environ.get('GIT_DESCRIBE_TAG', environ.get('GIT_FULL_HASH', '')) }}
 
 build:
-  number: {{ environ.get('GIT_DESCRIBE_NUMBER', '') }}
-  string: {{ environ.get('GIT_BUILD_STR', '') }}
+  number: {{ environ.get('GIT_DESCRIBE_NUMBER', '') }}
+  string: {{ environ.get('GIT_BUILD_STR', '') }}
 
 source:
   path: ..
 
 requirements:
   build:
-    - gcc >=14.2.0
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
+    - autoconf >=2.72
+    - automake # Needed for aclocal only.
     - gsl >=2.8
-    - gxx >=14.2.0
     - libboost >=1.83.0
     - libboost-headers >=1.83.0
+    - m4 >=1.4.18
     - ragel >=6.10
     - zlib >=1.2.13
   run:
-    - _openmp_mutex >=4.5
-    - gsl >=2.8
-    - libboost >=1.83.0
-    - libgcc >=14.2.0
-    - libgcc-ng >=14.2.0
-    - libopenblas >=0.3.30
-    - libstdcxx >=14.2.0
+    - {{ pin_compatible('_openmp_mutex', max_pin = None) }}
+    - {{ pin_compatible('gsl', max_pin = None) }}
+    - {{ pin_compatible('libboost', max_pin = None) }}
+    - {{ pin_compatible('libopenblas', max_pin = None) }}
+    - {{ pin_compatible('zlib', max_pin = None) }}
 
 about:
   home: https://github.com/saskeli/seed_finding
