Fix calculting Huddinge distance of gapmers, utilise SIMD
– Since there were bugs in Huddinge distance calculation, rewrote the algorithm with SIMD instructions.
– Added Google’s Highway as submodule to facilitate this.
– The functions that calculate the distance now return a struct instead of using an out parameter as recommended by C++ Core Guidelines F.21.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "deps/libbio"]
 	path = deps/libbio
 	url = https://github.com/tsnorri/libbio.git
+[submodule "deps/highway"]
+	path = deps/highway
+	url = https://github.com/google/highway.git
